--- a/Procrastination/welcome-page.html
+++ b/Procrastination/welcome-page.html
@@ -20,23 +20,22 @@
 .container { 
     position: relative; 
     margin: 0 auto; 
-    max-height: 570px;
+    max-height: 500px;
 }
 
 .container img {vertical-align: middle;}
-   
+
 .container .centered {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-        
+
 .container .content {
     position: absolute; /* Position the background text */
     bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-    background: rgb(0, 0, 0); /* Fallback color */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+   /* Black background with 0.5 opacity */
     color: #7c96cd; /* Grey text */
     width: 100%; /* Full width */
     padding: 20px; /* Some padding */
@@ -61,9 +60,26 @@ bodyFormat{
 
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
+<script> 
+    $(function(){
+            $("titleA").animate({
+                opacity: '0.8',
+                height: '+=100px',
+                width: '98%',
+                fontSize: '70px',
+                padding: '12px'
+            });     
+    });
+</script>
 </head> 
 
-<body>
+<body> 
+
+<titleA class ="homeTitle">
+    <p>
+        procrasti-NOT
+    </p>
+</titleA> 
 
 <div class="container">
     <img src="img/toDoList.jpg" alt="toDoList" style="width:100%;">
@@ -81,3 +97,4 @@ bodyFormat{
 </body>
 
 </html>
+
