--- a/Procrastination/createList.html
+++ b/Procrastination/createList.html
@@ -36,16 +36,14 @@
                 <div class="form-group">
                     <label >Visibility: </label>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="publicCheckbox" name="Visibility" value="pub" required>
+                    <input class="form-check-input" type="checkbox" id="publicCheckbox" name="Visibility" value="pub" >
                     <label class="form-check-label" for="inlineCheckbox1">Public</label>
                   </div>
                   <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="privateCheckbox" name="Visibility" value="pri" required>
+                    <input class="form-check-input" type="checkbox" id="privateCheckbox" name="Visibility" value="pri" >
                     <label class="form-check-label" for="inlineCheckbox2">Private</label>
                   </div>
-                  <div class="invalid-feedback">
-                    You must agree before submitting.
-                  </div>
+                                  
 
                 </div>
 
